--- a/app.json
+++ b/app.json
@@ -1,12 +1,15 @@
 {
   "pages":[
+    "pages/trade/trade",
+    "pages/jpzx/jpzx",
+    "pages/shop/shop",
     "pages/index/index",
     "pages/logs/logs"
   ],
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "茶易宝",
     "navigationBarTextStyle":"black"
   }
 }
